--- a/graph_lib_exemple_graph/graph_lib.cbp
+++ b/graph_lib_exemple_graph/graph_lib.cbp
@@ -38,6 +38,8 @@
 			<Add library="jpgalleg" />
 			<Add library="alleg44.dll" />
 		</Linker>
+		<Unit filename="Sous-p.cpp" />
+		<Unit filename="Sous-p.h" />
 		<Unit filename="graph.cpp" />
 		<Unit filename="graph.h" />
 		<Unit filename="grman/coords.cpp" />
